# fintrack

./: README.md  pyproject.toml
fintrack/: portfolio.py
notebooks/: yfinance.ipynb
tests/: test_portfolio.py
