[project]
name = "fintrack"
version = "0.1.0"
description = ""
authors = [
    {name = "David Tigreros",email = "tigrerosd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "notebook (>=7.3.2,<8.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "yfinance (>=0.2.52,<0.3.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "selenium (>=4.28.1,<5.0.0)",
    "behave (>=1.2.6,<2.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "stock-indicators (>=1.3.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
